Opened 4 years ago
Closed 3 years ago
#7712 closed defect (fixed)
Check for multiple -filter options broken
Reported by: | Gyan | Owned by: | |
---|---|---|---|
Priority: | important | Component: | ffmpeg |
Version: | git-master | Keywords: | regression |
Cc: | blacktrash@gmx.net, ffmpeg@frank.haefemeier.eu, alexandr.kara@gmail.com, bokeron2020@gmail.com | Blocked By: | |
Blocking: | Reproduced by developer: | yes | |
Analyzed by developer: | no |
Description
Despite having only one -vf and -af, error message that multiple filter options are set is shown.
Command:
ffmpeg -i "small.mp4" -vf "scale=w=640:h=360:force_original_aspect_ratio=decrease" -af "aresample=async=1" -f mpegts "out1.ts" -y 2> nb_filter_err.log
Log:
ffmpeg version N-93028-gd8ebfd1bdf Copyright (c) 2000-2019 the FFmpeg developers built with gcc 8.2.1 (Rev1, Built by MSYS2 project) 20181214 configuration: --disable-autodetect --enable-amf --enable-bzlib --enable-cuda --enable-cuvid --enable-d3d11va --enable-dxva2 --enable-iconv --enable-lzma --enable-nvenc --enable-zlib --enable-sdl2 --disable-debug --enable-ffnvcodec --enable-nvdec --enable-libmp3lame --enable-libopus --enable-libvorbis --enable-libvpx --enable-libx264 --enable-libx265 --enable-libdav1d --enable-fontconfig --enable-libass --enable-libbluray --enable-libfreetype --enable-libmfx --enable-libmysofa --enable-libopencore-amrnb --enable-libopencore-amrwb --enable-libopenjpeg --enable-libsnappy --enable-libsoxr --enable-libspeex --enable-libtheora --enable-libtwolame --enable-libvidstab --enable-libvo-amrwbenc --enable-libwavpack --enable-libwebp --enable-libxml2 --enable-libzimg --enable-libshine --enable-gpl --enable-avisynth --enable-libxvid --enable-libaom --enable-version3 --enable-chromaprint --enable-decklink --enable-frei0r --enable-libbs2b --enable-libcaca --enable-libcdio --enable-libfdk-aac --enable-libflite --enable-libfribidi --enable-libgme --enable-libgsm --enable-libilbc --enable-libkvazaar --enable-libmodplug --enable-libopenh264 --enable-libopenmpt --enable-librtmp --enable-librubberband --enable-libssh --enable-libtesseract --enable-libxavs --enable-libzmq --enable-libzvbi --enable-opencl --enable-opengl --enable-libvmaf --enable-libcodec2 --enable-libsrt --enable-ladspa --enable-openssl --extra-cflags=-fopenmp --extra-libs=-lgomp --extra-cflags=-DLIBTWOLAME_STATIC --extra-libs=-lstdc++ --extra-cflags=-DLIBSSH_STATIC --extra-ldflags='-Wl,--allow-multiple-definition' --extra-cflags=-DCACA_STATIC --extra-cflags=-DMODPLUG_STATIC --extra-cflags=-DCHROMAPRINT_NODLL --extra-libs=-lstdc++ --extra-cflags=-DZMQ_STATIC --extra-libs=-lpsapi --extra-cflags=-DLIBXML_STATIC --extra-libs=-liconv --disable-w32threads --extra-cflags=-DKVZ_STATIC_LIB --enable-nonfree libavutil 56. 26.100 / 56. 26.100 libavcodec 58. 44.100 / 58. 44.100 libavformat 58. 26.100 / 58. 26.100 libavdevice 58. 6.101 / 58. 6.101 libavfilter 7. 48.100 / 7. 48.100 libswscale 5. 4.100 / 5. 4.100 libswresample 3. 4.100 / 3. 4.100 libpostproc 55. 4.100 / 55. 4.100 Input #0, mov,mp4,m4a,3gp,3g2,mj2, from 'small.mp4': Metadata: major_brand : isom minor_version : 512 compatible_brands: isomiso2avc1mp41 encoder : Lavf58.25.100 Duration: 00:00:01.07, start: 0.000000, bitrate: 487 kb/s Stream #0:0(eng): Video: h264 (Main) (avc1 / 0x31637661), yuv420p, 1280x720 [SAR 1:1 DAR 16:9], 376 kb/s, 30 fps, 30 tbr, 15360 tbn, 60 tbc (default) Metadata: handler_name : VideoHandler Stream #0:1(eng): Audio: aac (LC) (mp4a / 0x6134706D), 48000 Hz, stereo, fltp, 96 kb/s (default) Metadata: handler_name : SoundHandler Only '-vf scale=w=640:h=360:force_original_aspect_ratio=decrease' read, ignoring remaining -vf options: Use ',' to separate filters Only '-af aresample=async=1' read, ignoring remaining -af options: Use ',' to separate filters Stream mapping: Stream #0:0 -> #0:0 (h264 (native) -> mpeg2video (native)) Stream #0:1 -> #0:1 (aac (native) -> mp2 (native)) Press [q] to stop, [?] for help Output #0, mpegts, to 'out1.ts': Metadata: major_brand : isom minor_version : 512 compatible_brands: isomiso2avc1mp41 encoder : Lavf58.26.100 Stream #0:0(eng): Video: mpeg2video (Main), yuv420p, 640x360 [SAR 1:1 DAR 16:9], q=2-31, 200 kb/s, 30 fps, 90k tbn, 30 tbc (default) Metadata: handler_name : VideoHandler encoder : Lavc58.44.100 mpeg2video Side data: cpb: bitrate max/min/avg: 0/0/200000 buffer size: 0 vbv_delay: -1 Stream #0:1(eng): Audio: mp2, 48000 Hz, stereo, s16, 384 kb/s (default) Metadata: handler_name : SoundHandler encoder : Lavc58.44.100 mp2 frame= 31 fps=0.0 q=23.0 Lsize= 209kB time=00:00:01.02 bitrate=1679.2kbits/s speed=15.4x video:140kB audio:48kB subtitle:0kB other streams:0kB global headers:0kB muxing overhead: 11.072679%
Change History (7)
comment:1 by , 4 years ago
Reproduced by developer: | set |
---|---|
Status: | new → open |
comment:2 by , 4 years ago
Cc: | added |
---|
comment:3 by , 4 years ago
Cc: | added |
---|
comment:4 by , 3 years ago
Cc: | added |
---|
I can trigger it with ffmpeg -i v0.avi -i v1.avi -c:v copy -c:a aac -map 0:0 -map 1:1 -map 0:1 -ac:a:0 2 -filter:a:0 "adelay=1s,atempo=0.959" -filter:a:1 "atrim=1.45" -metadata:s:a:0 language=cze -metadata:s:a:1 language=eng -metadata:s:s:0 language=eng output.mkv
Looks like -filter:a:0 and -filter:a:1 are not treated as separate.
The error is:
Only '-vf (null)' read, ignoring remaining -vf options: Use ',' to separate filters
Only '-af adelay=1s,atempo=0.959' read, ignoring remaining -af options: Use ',' to separate filters
Only '-af atrim=1.45' read, ignoring remaining -af options: Use ',' to separate filters
The version is 4.2.1 (Fedora 31)
comment:6 by , 3 years ago
Cc: | added |
---|
ffmpeg version git-2020-02-24-bc9b635
I can trigger it with:
ffmpeg -i "test_in.mkv" -vf fade=t=out:st=2603.652:d=2 -af afade=t=out:st=2603.652:d=2 -c:v:0 libx265 -x265-params log-level=error:crf=28 -c:a:0 libmp3lame -cutoff 16.5k -q:a 6 "test_out.mkv"
comment:7 by , 3 years ago
Keywords: | regression added |
---|---|
Priority: | normal → important |
Resolution: | → fixed |
Status: | open → closed |
This was kindly fixed by Marton Balint in 60e26346626cc136521a250388b5c7015ba57138
This command triggers another, related bug: