fftools/ffmpeg_opt: remove bogus warning of multiple -af and -vf usage

This is redundant after the last patch and also fixes ticket #7712.

Signed-off-by: Marton Balint <cus@passwd.hu>